[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remote-gpu-stats"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fabric>=3.2.2",
    "rich>=14.2.0",
]


[project.scripts]
remote-gpu-stats = "remote_gpu_stats.cli:main"
